--- a/envelope_address.html
+++ b/envelope_address.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Envelope <Address></Address></title>
+    <title>Envelope Address</title>
 </head>
 <body>
+    <h1>Envelope Address</h1>
     <div style="width: 633px; height: 265px; border: 1px solid #000;">
         <div>
             <i>Your Name</i><br/>
