--- a/Recipe.html
+++ b/Recipe.html
@@ -7,6 +7,7 @@
     <title>Recipe</title>
 </head>
 <body>
+    <h1>Recipe</h1>
     <p>Ingredients:</p>
     <ul>
         <li>450 grams spaghetti</li>
