--- a/up-and-bottom.html
+++ b/up-and-bottom.html
@@ -7,9 +7,10 @@
     <title>Up and Bottom</title>
 </head>
 <body>
-    <span id="top">
-    <a href="#bottom">go to bottom</a>
+    <span id="top"></span>
+    <h1>Up and Bottom</h1>
     </span>
+    <a href="#bottom">go to bottom</a>
     <p>
         Logan masque tarantula tusk hercules. Komodo nightmare wilsonfisk frankcastle mordo. Cerebro gambit wildchild zola wonderman. Cannonball jocasta arcade norrinradd phalanx defenders madthinker, hankpym piledriver. Ego crusher bullseye logan dumdum scarletspider hellion pride ricochet octopus hulkling. Beyonder johnnyblaze blackbolt bishop mauler thunderbolts. Xorn screwball echo sandman mentallo abomb karma janefoster! Exodus cuckoos onslaught lilandra thunderbolts scarletwitch tarantula bishop yellowjacket komodo blackknight tchalla morph. Stature shaman proudstar goliath scrambler nickfury arcana. Kang cannonball bob caliban hammerhead arcana powerman dynamo betaray miek jessicajones. Braddock lionheart ares, kaine msmarvel exiles spyke colossus sunfire mongoose. Faustus silversurfer sasquatch electro chameleon invaders x-statix stryfe. Cyclops jarvis spider-man powerman.
         </p>
