--- a/Your Name.html
+++ b/Your Name.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Your Name</title>
 </head>
 <body>
+    <h1>Your Name</h1>
+    <br/>
     <h6>C</h6>
     <h5>H</h5>
     <h4>E</h4>
