--- a/envelope_address.html
+++ b/envelope_address.html
@@ -10,16 +10,10 @@
     <h1>Envelope Address</h1>
     <div style="width: 633px; height: 265px; border: 1px solid #000;">
         <div>
-            <i>Your Name</i><br/>
-            <i>Return Address Line 1</i><br/>
-            <i>Return Address Line 2</i><br/>
+            <p><i>Your Name<br/> Return Address Line 1<br/> Return Address Line 2</i></p>
         </div>
-            <br/>
-            <br/>
         <div style="text-align: center">
-            <i>Some A Person</i><br/>
-            <i>Recipient Address Line 1</i><br/>
-            <i>Recipient Address Line 2</i><br/>
+            <p><i>Some A Person<br/> Recipient Address Line 1<br/> Recipient Address Line 2</i></p>
         </div>    
     </div>
 </body>
