--- a/follow-the-steps/css1.html
+++ b/follow-the-steps/css1.html
@@ -22,7 +22,7 @@
         This is the subheadline that is wrapped in "h3" tags.
     </h3>
     <p>
-        <a style="color: green; text-decoration: underline;" href="https://www.google.com">I'm a link to google</a>
+        <a style="color: green; text-decoration: underline;" href="https://www.google.com" target="_blank">I'm a link to google</a>
     </p>
     <iframe width="600" height="400" allow="encrypted-media"
         src="https://www.youtube.com/embed/mk48xRzuNvA">
