Fix the wrong display on the day

--- a/javascript-chapter-1-exercises/clock/index.html
+++ b/javascript-chapter-1-exercises/clock/index.html
@@ -14,10 +14,10 @@
         <h2 id="dayToday"></h2>
     </div>
     <script type="text/javascript">
-        dayName = ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"];
+        dayName = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
 
         monthName = ["January", "February", "March", "April", "May", "June",
-        "July", "August", "September", "October", "November", "December"];
+                    "July", "August", "September", "October", "November", "December"];
 
         const clockNow = new Date();
         let monthNow = monthName[clockNow.getMonth()];
