--- a/javascript-chapter-1-exercises/clock/index.html
+++ b/javascript-chapter-1-exercises/clock/index.html
@@ -7,11 +7,17 @@
     <title>Clock</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-    <p id="timeNowResult"></p>
-    <div>
-        <h1 id="monthAndDate"></h1>
-        <h1 id="timeToday"></h1>
-        <h2 id="dayToday"></h2>
+    <div id="wrap">
+        <div>
+            <p id="timeNowResult"></p>
+        </div>
+        <div>
+            <div id="circleClock">
+                <h1 id="monthAndDate"></h1>
+                <h1 id="timeToday"></h1>
+                <h3 id="dayToday"></h3>
+            </div>
+        </div>
     </div>
     <script type="text/javascript">
         dayName = ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
@@ -59,7 +65,7 @@
         const twoDigitMinute = addZero(minuteNow);
         const twoDigitSeconds = addZero(secondsNow);
 
-        const clockResult = `Today is: ${dayNow}. Current time is: ${monthNow} ${dateNow} ${twoDigitHour}:${twoDigitMinute} ${amPm}`;
+        const clockResult = `Today is : ${dayNow}. Current time is : ${monthNow} ${dateNow} ${twoDigitHour}:${twoDigitMinute} ${amPm}`;
         document.getElementById("timeNowResult").innerHTML = clockResult;
 
         document.getElementById("monthAndDate").innerHTML = `${monthNow} ${dateNow}`
