--- a/follow-the-steps/css1.html
+++ b/follow-the-steps/css1.html
@@ -1,31 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Follow the Steps</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1 style="padding: 10px; background: green; color: white">
-        This is the main heading that is wrapped in "h1" tags.
+      This is the main heading that is wrapped in "h1" tags.
     </h1>
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada vehicula dictum. Integer tristique sapien nec lectus lobortis placerat.
-        <strong style="color: blue;"> MAKE THIS TEXT BLUE.</strong>
-        Vestibulum molestie semper facilisis. Vestibulum finibus sit amet metus eget elementum. Morbi sed eros orci.
-        <em style="color: blue;">MAKE THIS TEXT BLUE.</em>
-        Nullam lacinia interdum felis sit amet aliquet.
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam malesuada
+      vehicula dictum. Integer tristique sapien nec lectus lobortis placerat.
+      <strong style="color: blue"> MAKE THIS TEXT BLUE.</strong>
+      Vestibulum molestie semper facilisis. Vestibulum finibus sit amet metus
+      eget elementum. Morbi sed eros orci.
+      <em style="color: blue">MAKE THIS TEXT BLUE.</em>
+      Nullam lacinia interdum felis sit amet aliquet.
     </p>
-    <img style="width: 100%; border-radius: 50%;" src="https://i.ibb.co/NjqqDqd/under-water.png" alt="" />
-    <h3 style="color: red;">
-        This is the subheadline that is wrapped in "h3" tags.
+    <img
+      style="width: 100%; border-radius: 50%"
+      src="https://i.ibb.co/NjqqDqd/under-water.png"
+      alt=""
+    />
+    <h3 style="color: red">
+      This is the subheadline that is wrapped in "h3" tags.
     </h3>
     <p>
-        <a style="color: green; text-decoration: underline;" href="https://www.google.com" target="_blank">I'm a link to google</a>
+      <a
+        style="color: green; text-decoration: underline"
+        href="https://www.google.com"
+        target="_blank"
+        >I'm a link to google</a
+      >
     </p>
-    <iframe width="600" height="400" allow="encrypted-media"
-        src="https://www.youtube.com/embed/mk48xRzuNvA">
+    <iframe
+      width="600"
+      height="400"
+      allow="encrypted-media"
+      src="https://www.youtube.com/embed/mk48xRzuNvA"
+    >
     </iframe>
 
     <!-- Tasks
@@ -49,5 +64,5 @@
     6. Optional HTML challenges
         Change the "src" of the <img> so it uses the URL of a different image
         Change the embedded video to your favourite nostalgic Aussie rock song of the 1980s -->
-</body>
+  </body>
 </html>
