--- a/mini-exercises/plus-minus-button/index.html
+++ b/mini-exercises/plus-minus-button/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Plus and Minus Button</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
     <main>
-        <div class="object">
-            <button id="decreaseLabel" onclick="decreaseValue()"></button>
-            <span id="output-area"></span>
-            <button id="increaseLabel" onclick="increaseValue()"></button>
-            <button id="resetButton" onclick="resetValue()"></button>
-        </div>
+      <div class="object">
+        <button id="decreaseLabel" onclick="decreaseValue()"></button>
+        <span id="output-area"></span>
+        <button id="increaseLabel" onclick="increaseValue()"></button>
+        <button id="resetButton" onclick="resetValue()"></button>
+      </div>
     </main>
     <script src="main.js"></script>
-</body>
+  </body>
 </html>
