--fix uncaught error

--- a/mini-exercises/site-project/index.html
+++ b/mini-exercises/site-project/index.html
@@ -10,62 +10,62 @@
       src="https://kit.fontawesome.com/98292a5249.js"
       crossorigin="anonymous"
     ></script>
+    <script src="script.js" defer></script>
   </head>
-  <body onload="displayInfo()"">
-  <main>
-    <nav>
-      <h1><a href="index.html">John Leonoras</a></h1>
-      <div class="nav-links">
-        <ul>
-          <li><a class="current" href="index.html">Home</a></li>
-          <li><a href="about.html">About</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </div>
-    </nav>
-    <div class="main-page">
-      <div class="main-page-section">
-        <h1 id="myName"></h1>
-        <h2 id="myCareer"></h2>
-        <div class="btn">
-          <button onclick="showMoreInfo()" type="button">Learn more ≫</button>
+  <body onload="displayInfo()">
+    <main>
+      <nav>
+        <h1><a href="index.html">John Leonoras</a></h1>
+        <div class="nav-links">
+          <ul>
+            <li><a class="current" href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
         </div>
-      </div>
-      <div class="main-page-section-2" style="display: none">
-        <div class="details-list">
-          <div id="flex-items" class="hobbies-box">
-            <h3 id="hobbies"></h3>
-            <span id="ulHobbies"></span>
-          </div>
-          <br />
-          <div id="flex-items" class="favFoods-box">
-            <h3 id="favFoods"></h3>
-            <span id="ulFavFoods"></span>
-          </div>
-          <br />
-          <div id="flex-items" class="favSeries-box">
-            <h3 id="favSeries"></h3>
-            <span id="ulFavSeries"></span>
-          </div>
-          <br />
-          <div id="flex-items" class="favMovies-box">
-            <h3 id="favMovies"></h3>
-            <span id="ulFaveMovies"></span>
+      </nav>
+      <div class="main-page">
+        <div class="main-page-section">
+          <h1 id="myName"></h1>
+          <h2 id="myCareer"></h2>
+          <div class="btn">
+            <button onclick="showMoreInfo()" type="button">Learn more ≫</button>
           </div>
         </div>
+        <div class="main-page-section-2" style="display: none">
+          <div class="details-list">
+            <div id="flex-items" class="hobbies-box">
+              <h3 id="hobbies"></h3>
+              <span id="ulHobbies"></span>
+            </div>
+            <br />
+            <div id="flex-items" class="favFoods-box">
+              <h3 id="favFoods"></h3>
+              <span id="ulFavFoods"></span>
+            </div>
+            <br />
+            <div id="flex-items" class="favSeries-box">
+              <h3 id="favSeries"></h3>
+              <span id="ulFavSeries"></span>
+            </div>
+            <br />
+            <div id="flex-items" class="favMovies-box">
+              <h3 id="favMovies"></h3>
+              <span id="ulFaveMovies"></span>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
-    <footer class="footer-container">
-      <h4>Made with ❤ by John Leonoras</h4>
-      <div class="social">
-        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-        <a href="#"><i class="fa-brands fa-github"></i></a>
-        <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
-        <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
-      </div>
-    </footer>
-  </main>
-  <script src="script.js"></script>
+      <footer class="footer-container">
+        <h4>Made with ❤ by John Leonoras</h4>
+        <div class="social">
+          <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="#"><i class="fa-brands fa-github"></i></a>
+          <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+          <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
+        </div>
+      </footer>
+    </main>
   </body>
 </html>
 
